@@ -112,7 +112,9 @@ def StyleText(stc, start, end):
     cpos = 0
     stc.StartStyling(cpos, 0x1f)
     lexer = get_lexer_by_name("html+django")
-    for token, txt in lexer.get_tokens(stc.GetTextRange(0, end)):
+    doctxt = stc.GetTextRange(0, end)
+    wineol = stc.GetEOLChar() == "\r\n"
+    for token, txt in lexer.get_tokens(doctxt):
 #        print token, txt
         style = TOKEN_MAP.get(token, STC_DJANGO_DEFAULT)
         if style == STC_DJANGO_PREPROCESSOR and txt.startswith(u'#'):
@@ -121,9 +123,12 @@ def StyleText(stc, start, end):
 #            style = STC_DJANGO_STRINGEOL
 
         tlen = len(txt)
+        if wineol and "\n" in txt:
+            tlen += txt.count("\n")
+
         if tlen:
-            stc.SetStyling(len(txt), style)
-        cpos += len(txt)
+            stc.SetStyling(tlen, style)
+        cpos += tlen
         stc.StartStyling(cpos, 0x1f)
 
 #-----------------------------------------------------------------------------#
